--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
 .App {
   text-align: center;
+  color: #282c34 !important;
+}
+.App > h1 {
+  font-weight: 600;
+  line-height: 62px;
 }
 
 .App-logo {
