--- a/src/App.css
+++ b/src/App.css
@@ -47,21 +47,8 @@ body {
   box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
 }
-.input-button {
-  margin-bottom: 20px;
-  border-radius: 22px;
-  background: linear-gradient(to right, rgb(242, 112, 156), rgb(255, 148, 114));
-  color: #fff;
-  border: 0px;
-  padding: 10px 50px;
-  font-size: 14px !important;
+.input-muted-text {
+  color: rgba(34, 34, 34, 0.445);
+  font-size: 12px;
   font-weight: 700;
-  outline: none;
-  box-shadow: 0 2px 30px 0 rgba(0, 0, 0, 0.1);
-  text-align: center;
-  transition: 0.1s ease-in-out;
-  cursor: pointer;
-}
-.input-button:active {
-  transform: scale(0.91);
 }
